[package]
name = "app-builder"
version = "0.1.1"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
handlebars = "2.0.2"
serde_json = "1.0"