[package]
name = "app-builder"
version = "0.1.1"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tiberius = "0.5"
csv = "1.1"
clap = "2"
regex = "1"
lazy_static = "1.4"
glob = "0.3.0"
calamine = "0.18"
handlebars = "3.5.4"