[package]
name = "app-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.4.0"
pest_derive = "2.4.0"
tera = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
conv = "0.3.2"
clap = { version = "4.1.1", features = ["derive"] }
postgres = "0.19.4"
polars = { version = "0.27.2", features = ["lazy"] }
reqwest =  { version = "0.11.14", features = ["blocking"] }
color-eyre = "0.6"

[profile.dev.package.backtrace]
opt-level = 3